testing changes with tailwind

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0",
+    "astro": "^2.0.5",
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
-    "cypress": "^10.0.3"
+    "@astrojs/tailwind": "^3.0.1",
+    "cypress": "^10.0.3",
+    "tailwindcss": "^3.2.4"
   }
 }
