--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.1.1",
     "@astrojs/tailwind": "^3.0.1",
     "cypress": "^10.0.3",
     "tailwindcss": "^3.2.4"
