--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^2.0.5",
+    "astro": "^2.0.6",
     "prettier-plugin-astro": "^0.8.0"
   },
   "dependencies": {
     "@astrojs/netlify": "^2.1.1",
     "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/vue": "^2.0.1",
     "cypress": "^10.0.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vue": "^3.2.47"
   }
 }
