--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "astro": "^2.0.6",
-    "prettier-plugin-astro": "^0.8.0"
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.3"
   },
   "dependencies": {
     "@astrojs/netlify": "^2.1.1",
